--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/account"
+        android:id="@+id/ng_account"
         android:icon="@drawable/ic_account_foreground"
         android:title="@string/account" />
 
     <item
-        android:id="@+id/friends"
+        android:id="@+id/ng_friends"
         android:icon="@drawable/ic_home_foreground"
         android:title="@string/friends_list" />
 
@@ -17,7 +17,7 @@
         android:title="@string/calendar" />
 
     <item
-        android:id="@+id/cart"
+        android:id="@+id/ng_cart"
         android:icon="@drawable/ic_cart_foreground"
         android:title="@string/cart" />
 </menu>
