ImageStorage.kt added and loading using camera and disk implementing

--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -6,9 +6,9 @@
         android:icon="@drawable/ic_edit_foreground"
         android:title="@string/edit"
         app:showAsAction="always" />
-    <item
-        android:id="@+id/changeImage"
-        android:icon="@drawable/ic_change_photo"
-        android:title="@string/change_image"
-        app:showAsAction="always" />
+    <!--    <item-->
+    <!--        android:id="@+id/changeImage"-->
+    <!--        android:icon="@drawable/ic_change_photo"-->
+    <!--        android:title="@string/change_image"-->
+    <!--        app:showAsAction="always" />--> <!--todo delete-->
 </menu>
