--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -6,13 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragments.CalendarFragment">
 
-    <CalendarView
+    <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        app:headerColor="@color/primary"
+        app:headerLabelColor="@color/icons"
+        app:previousButtonSrc="@drawable/ic_prev"
+        app:forwardButtonSrc="@drawable/ic_next"
+        app:highlightedDaysLabelsColor="@color/accent"
+        app:todayLabelColor="@color/primary_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
