--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -13,15 +13,15 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        app:headerColor="@color/primary"
-        app:headerLabelColor="@color/icons"
-        app:previousButtonSrc="@drawable/ic_prev"
         app:forwardButtonSrc="@drawable/ic_next"
+        app:headerColor="@color/primary_light"
+        app:headerLabelColor="@color/icons"
         app:highlightedDaysLabelsColor="@color/accent"
-        app:todayLabelColor="@color/primary_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:previousButtonSrc="@drawable/ic_prev"
+        app:todayLabelColor="@color/primary_dark" />
 
     <TextView
         android:id="@+id/tv_date"
@@ -29,7 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
-        android:text="TextView"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -43,7 +42,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:text="TextView"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
