--- a/app/src/main/res/drawable/border_red.xml
+++ b/app/src/main/res/drawable/border_red.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/inputsBack" />
     <stroke
         android:width="5dp"
         android:color="@color/accent" />
