--- a/app/src/main/res/layout/dialog_add_event.xml
+++ b/app/src/main/res/layout/dialog_add_event.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,8 +19,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        app:boxBackgroundColor="@color/white"
+        android:maxLines="3"
+        android:scrollbars="vertical"
+        app:boxBackgroundColor="@color/inputsBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -32,6 +34,6 @@
             android:id="@+id/et_event_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter event desc" />
+            android:hint="@string/enter_event_desc" />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
