--- a/app/src/main/res/layout/dialog_add_wishlist.xml
+++ b/app/src/main/res/layout/dialog_add_wishlist.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.AddWishlistDialog">
+    tools:context=".presentation.dialogs.AddWishlistDialog">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +22,7 @@
             android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/inputsBack"
             android:hint="@string/enter_wishlist_s_name"
             android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
