--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:maxLines="2"
+        android:scrollbars="vertical"
         android:text="@string/name"
         android:textColor="@color/primary_text"
         android:textSize="24sp"
@@ -50,9 +51,10 @@
         android:id="@+id/tv_birthdate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="@string/birth_date"
+        android:textColor="@color/accent"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +65,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:maxLines="4"
         android:scrollbars="vertical"
