--- a/app/src/main/res/layout/dialog_edit_client.xml
+++ b/app/src/main/res/layout/dialog_edit_client.xml
@@ -12,7 +12,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/til_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,7 +24,7 @@
             android:layout_height="wrap_content"
             android:background="@color/inputsBack"
             android:hint="@string/name"
-            android:maxLines="2"
+            android:maxLines="1"
             android:scrollbars="vertical" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -45,7 +44,6 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/til_info"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +70,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/til_birth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +81,7 @@
             android:layout_height="wrap_content"
             android:background="@color/inputsBack"
             android:hint="@string/info"
-            android:maxLines="3"
+            android:maxLines="2"
             android:scrollbars="vertical" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,7 +92,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -108,6 +104,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/inputsBack"
             android:hint="@string/birth_date"
-            android:inputType="date" />
+            android:inputType="date"
+            android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
