--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:maxLines="2"
+        android:scrollbars="vertical"
         android:text="@string/name"
         android:textColor="@color/primary_text"
         android:textSize="24sp"
