--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -6,14 +6,19 @@
 
     <TextView
         android:id="@+id/tv_wishlist_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/name"
+        android:textAlignment="textStart"
         android:textColor="@color/primary_text"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
