--- a/app/src/main/res/layout/dialog_add_gift.xml
+++ b/app/src/main/res/layout/dialog_add_gift.xml
@@ -22,6 +22,7 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/til_name"
         app:layout_constraintStart_toStartOf="parent"
