--- a/app/src/main/res/layout/item_gift_cart.xml
+++ b/app/src/main/res/layout/item_gift_cart.xml
@@ -47,4 +47,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_photo" />
 
+    <ImageView
+        android:id="@+id/iv_changed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_info_24"
+        app:tint="@color/accent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
