--- a/app/src/main/res/values/ic_gift_giver_background.xml
+++ b/app/src/main/res/values/ic_gift_giver_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_gift_giver_background">#FDBF08</color>
+    <color name="ic_gift_giver_background">#FDC002</color>
 </resources>
