--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -38,8 +38,10 @@
         android:id="@+id/iv_photo"
         android:layout_width="180dp"
         android:layout_height="180dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:contentDescription="@string/gift_image"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toStartOf="@+id/tv_for"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
